name:              Nollform
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Arash Rouhani
maintainer:        Arash Rouhani
synopsis:          Nollenkat
description:       Nollor beskriver om sig sjalva. 
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://Nollform.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Controller
    hs-source-dirs: ., config
    other-modules:   MySite
                     Model
                     Types
                     Kerberos
                     Settings
                     StaticFiles
                     Handler.Root
                     Handler.View

executable         Nollform
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded

    main-is:       config/Nollform.hs
    hs-source-dirs: ., config

    build-depends: base         >= 4       && < 5
                 , yesod-core   >= 0.8.2   && < 0.9
                 , yesod-auth   >= 0.6     && < 0.7
                 , yesod-static >= 0.1     && < 0.2
                 , yesod-form   >= 0.2.0   && < 0.3
                 , yesod-persistent >= 0.1.0   && < 0.2
                 , blaze-html >= 0.4.1.1   && < 0.5
                 , wai          >= 0.4     && < 0.5
                 , mtl
                 , monad-control
                 , process
                 , time
                 , mime-mail
                 , wai-extra
                 , directory
                 , bytestring
                 , text
                 , persistent
                 , persistent-template
                 , persistent-postgresql >= 0.5 && < 0.6
                 , template-haskell
                 , hamlet
                 , hjsmin
                 , transformers
                 , warp
                 , blaze-builder
